--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title id="title">Dr. Norman Borlaug</title>
 </head>
 <body>
-    <h1>Hello World, we are software developers!</h1>
+    <main id="main">
+        
+
+
+    </main>
 </body>
 </html>
